# text-classification-api

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile
src/api/: dependencies.py  main.py
src/api/routes/: analyze.py
src/core/: config.py
src/models/: preprocessing.py  sentiment.py
src/schemas/: requests.py  responses.py
src/services/: analyzer.py  cache.py  youtube.py
src/utils/: cli_dashboard.py  validators.py
tests/: conftest.py
tests/integration/: test_analysis_pipeline.py  test_api.py
tests/unit/: test_model_download.py  test_textprocessor.py  test_validators.py
