[project]
name = "sentiment-analysis-api"
version = "0.1.0"
description = "This is a sentiment analysis API that analyzes comments from YouTube videos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "emoji>=2.15.0",
    "fastapi>=0.129.0",
    "google-api-python-client>=2.190.0",
    "httpx>=0.28.1",
    "onnxruntime>=1.24.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
